[gd_scene load_steps=2 format=3 uid="uid://j6vfb4cr7b0g"]

[ext_resource type="Script" uid="uid://do3sx748vs5ms" path="res://Scripts/main.gd" id="1_jjgbg"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jjgbg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1159.0
offset_bottom = 648.0

[node name="Botões" type="Node" parent="."]

[node name="iniciar" type="Button" parent="Botões"]
offset_left = 384.0
offset_top = 328.0
offset_right = 783.0
offset_bottom = 402.0
text = "PLAYTEST"

[node name="config" type="Button" parent="Botões"]
offset_left = 384.0
offset_top = 440.0
offset_right = 783.0
offset_bottom = 514.0
text = "CONFIGURAÇÕES
"

[node name="sair" type="Button" parent="Botões"]
offset_left = 384.0
offset_top = 552.0
offset_right = 783.0
offset_bottom = 626.0
text = "SAIR"

[connection signal="pressed" from="Botões/iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="Botões/config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="Botões/sair" to="." method="_on_sair_pressed"]
